syntax = "proto3";
package Gateway_gRPC_api;


// version 3.6.0
//~/protobuf/bin/protoc -I Gateway_Towards_Fenix_gRPC_api --go_out=plugins=grpc:Gateway_Towards_Fenix_gRPC_api Gateway_Towards_Fenix_gRPC_api/gateway_towards_fenix_grpc.proto
//~/protobuf/bin/protoc -I Gateway_Towards_Plugin_gRPC_api --go_out=plugins=grpc:Gateway_Towards_Plugin_gRPC_api Gateway_Towards_Plugin_gRPC_api/gateway_towards_plugin_grpc.proto

//190516
//protoc_3.7.0.rc2 -I Gateway_gRPC_api --go_out=plugins=grpc:Gateway_gRPC_api Gateway_gRPC_api/gateway_towards_fenix_grpc.proto

// Import common Gateway messages and servicesTestDataFormatTypeEnum
import "gateway_common_grpc.proto";

// ***********************************************************************************
// Runtime messages
// ***********************************************************************************



// *********************************************************
//  rpc SendTestInstructionResultTowardsFenix (TestInstructionExecutionResultMessage) returns (AckNackResponse)
//
// START
// **********

// The result of the TestInstructionExecution sent towards Fenix Inception
message TestInstructionExecutionResultMessage {
    string TestInstructionGuid = 1; //  TestInstructionGuid is a unique id created when TestInstruction is created in TestCase
    string ResultId = 2; // A unique id created by plugin
    string TimeOut = 3; // The Plugin sends back information about when the TestInstruction, Test Case, can be seen as Ended if no final result has sent been back for TestInstruction
    string TestInstructionResultCreatedDateTime = 4; // The DateTime when the message was created
    string TestInstructionResultSentDateTime = 5; // The DateTime when the message was sent
    AvailableTestExecutionResultsEnum TestExecutionResult = 6; // THe current execution status
}

// Status for an ongoing TestExecution of a TestInstruction
enum AvailableTestExecutionResultsEnum {
    Execution_Succeded = 0; // The execution succeded compared to expected result
    Execution_Failed = 1; // The execution failed compared to expected result
    Execution_Aborted = 2; // The Plugin Aborted the execution of the TestInstruction
    Execution_Running = 3; // Status for when TestInstruction is executing and TimeOut-time is sent back
}

// **********
// END
// *********************************************************

// *********************************************************
//  rpc SendTexecutionLogTowardsFenix (TexecutionLogMessage) returns (AckNackResponse)
//
// START
// **********

// A log post that sent back to Fenix Inception from plugin during test execution
message TexecutionLogMessage {
    string TestInstructionGuid = 1; //  TestInstructionGuid is a unique id created when TestInstruction is created in TestCase
    string LogMessageId = 2; // A unique id created by plugin
    string TestInstructionResultCreatedDateTime = 3; // The DateTime when the message was created
    string TestInstructionResultSentDateTime = 4; // The DateTime when the message was sent
    string LogMessage = 5; // The log message
    LogMessageTypeEnum LogMessageType = 6; // The type of the log message, text or json
}

// Is the log message a json-object or a plain text message
enum LogMessageTypeEnum {
    JSON = 0;
    TEXT = 1;
}

// **********
// END
// *********************************************************


// *********************************************************
//  rpc SendTestInstructionTimeOutTowardsPlugin (TestInstructionTimeOutMessage) returns (AckNackResponse)
//
// START
// **********

// A message telling Fenix when a TestInstruction should time out and by then the complete TestCase
message TestInstructionTimeOutMessage {
    string PluginId = 1; // The unique id of the plugin
    string PluginName = 2; // The name of the plugin
    string OriginalMessageId = 3; // A unique id from the TestInstruction request sent from Fenix
    string MessageId = 4; // A unique id generated when sent from Plugin
    string TimeOut = 5; // The time for timeout informat 'YYYY-MM-DD hh:mm:ss' w

}

// **********
// END
// *********************************************************

// ***********************************************************************************
// Test Data messages
// *****


// *********************************************************
//  rpc SupportedTestDataDomains (SupportedTestDataDomainsWithHeadersMessage) returns (AckNackResponse)
//
// START
// **********

// All supported Testdata domains supported by a specific Plugin
message SupportedTestDataDomainsWithHeadersMessage {
    string PluginId = 1; // The unique id of the plugin
    string PluginName = 2; // The name of the plugin
    string OriginalMessageId = 3; // A unique id from the request sent from Fenix
    string MessageId = 4; // A unique id generated when sent from Plugin

    // Message thats defines a specific domain of testdata, a specific area
    message TestDataDomainWithHeaders {
        string TestDataDomainId = 1; // The unique id of the testdata domain
        string TestDataDomainName = 2; // The name of the testdata domain
        string TestDataDomainDescription = 3; // A description of the testdata domain
        string TestDataDomainMouseOver = 4; // A mouse over description of the testdata domain

        // Message holding one header, key, that is used for filtering testdata
        message TestDataFilterHeader {
            string TestDataFilterHeaderId = 1; //  A unique id for the header
            string TestDataFilterHeaderName = 2;// A name for the keader
            string TestDataFilterHeaderDescription = 3; // A description of the header
            string TestDataFilterHeaderMouseOver = 4; // A mouse over description of the header
            string TestDataFilterHash = 5; // ??????????????????????????????????????????????????????????????????????????
            bool AllowMultipleChoices = 6; // Should multiple chocies be allowed for this header
            bool AllowNoChoice = 7; // Shpuld no choice be allowed for this header

            // Message holding a specific value for a header
            message TestDataFilterHeaderValue {
                string TestDataFilterHeaderValueId = 1; // A unique id for the filter value
                string TestDataFilterHeaderValueName = 2; // The name for the filter value
            }
            repeated TestDataFilterHeaderValue TestDataFilterHeaderValues = 8; // All values for a specific header, key, that can be usen when filtering
        }
        repeated TestDataFilterHeader TestDataFilterHeaders = 5; // All headers, keys, that is used for filter testdata
    }
    repeated TestDataDomainWithHeaders TestDataDomains = 5; // All supported Testdata domains from plugin

}

// **********
// END
// *********************************************************


// *********************************************************
//  rpc TestDataFromFilterValues (TestDataListFromFilterValuesMessage) returns (AckNackResponse)
//
// START
// **********

// Message that contains the filtered testdata that was asked for
message TestDataFromFilterValuesMessage {
    string PluginId = 1; // The unique id of the plugin
    string PluginName = 2; // The name of the plugin
    string OriginalMessageId = 3; // A unique id from the request sent from Fenix
    string MessageId = 4; // A unique id generated when sent from Plugin
    string TestDataDomainId = 5; //
    int64 StartLineOfResultSet = 6; //  This is the first Test Data Row that should be sent back to Fenix
    int64 MaxNumberOffLinesInResult = 7; // This is the number of Test Data Rows that should be sent back to Fenix
    TestDataFormatTypeEnum TestDataType = 8; // THe format the testdata is been delivered in

    // Message contining the testdata in a specific form
    message TestDataObject {
        ListObject TestDataAsList = 1; // Object containing Testdata in Listform
        JsonObject TestDataAsJson = 2; // Object containing Testdata in json-form
        XmlObject TestDataAsXml = 3; // Object containing Testdata in xml-form
        OtherFileObject TestDataAsOtherFile = 4; // Object containing Testdata in a non standard form
    }
    TestDataObject TestData = 9; // The object containing the testdata
}


// Testdata in listform
message ListObject {
    // Message for Header, Key
    message TestDataFilterHeader {
        string TestDataFilterHeaderId = 1; // Unique id for the header
        string TestDataFilterHeaderName = 2; // The Header name/value
    }
    repeated TestDataFilterHeader TestDataFIlterHeaders = 1; // All Headers
    // Message for row with testdata
    message TestDataRow {
        // Message for a value in the row
        message TestDataValue {
            string TestDataRowValueId = 1; // A unique id for the value
            string TestDataFilterRowValue = 2; // The value
        }
        repeated TestDataValue TestDataValues = 1; // All values on a row
    }
    repeated TestDataRow TestDataRows = 2; // All  testdata rows
}

// Testdata in jsaon-form
message JsonObject {

}

// Testdata in XML-form
message XmlObject {

}

// Testdata in some "other" form
message OtherFileObject {

}

// **********
// END
// *********************************************************


// ***********************************************************************************
// Registration messages
// ***********************************************************************************

// *********************************************************
//  rpc RegisterClientAddress (RegisterClientAddressRequest) returns (RegisterClientAddressResponse)
//
// START
// **********

// Request from client that register itself at gateway
message RegisterClientAddressRequest {
    CurrentVersionEnum gRPCVersion = 1; // The current version of the protofile
    string callingSystemId = 2; // The calling systems Id, Plugin or a Sub-Gateway,
    string callingSystemName = 3; // THe name of the Calling System
    string callingSystemIpAddress = 4; // The ip address for the calling system
}

// Prefered Port, where the client will called upon
message RegisterClientAddressResponse {
    string ClientPort = 1; //The port where the client will be called upon
    bool acknack = 2; // True=Ack, False=Nack
    string comments = 3; //Comments if needed
}

// **********
//
// END
// *********************************************************

// *********************************************************
//  rpc RegisterAvailbleTestInstruction(AvailbleTestInstructionAtPluginMessage)returns(AckNackResponse)
// START
// **********

// Data and Information regarding a specific TestInstruction offered by a specific plugin
message AvailbleTestInstructionAtPluginMessage {
    string asasd = 1; //
}

// **********
// END
// *********************************************************

// *********************************************************
//  rpc RegistrateAAvailableTestDataDomains(SupportedTestDataDomainsMessage) returns (AckNackResponse){
// START
// **********

// All supported Testdata domains supported by a specific Plugin
message SupportedTestDataDomainsMessage {
    string PluginId = 1; // The unique id of the plugin
    string PluginName = 2; // The name of the plugin
    string MessageId = 3; // A unique id generated when sent from Plugin

    // Message thats defines a specific domain of testdata, a specific area
    message TestDataDomain {
        string TestDataDomainId = 1; // The unique id of the testdata domain
        string TestDataDomainName = 2; // The name of the testdata domain
        string TestDataDomainDescription = 3; // A description of the testdata domain
        string TestDataDomainMouseOver = 4; // A mouse over description of the testdata domain
    }
    repeated TestDataDomain TestDataDomains = 4; // All supported Testdata domains from plugin
}

// **********
// END
// *********************************************************
// ***********************************************************************************
// Administrative messages
// ***********************************************************************************

// A message used when Plugin wants to send information to Fenix
message InformationMessage {
    string PluginId = 1; // The unique id of the plugin
    string PluginName = 2; // The name of the plugin
    string MessageId = 3; // A unique id generated when sent from Plugin
    enum InformationType {
        INFO = 0; // The message is pure information
        WARNING = 1; //  The message is of category WARNING
        ERROR = 2; // The Plugin wants to inform Fenix of that something is wrong
    }
    InformationType MessageType = 4;// The type of information message
    string message = 5; // The message from Plugin to Fenix
}

/*
// Used for defining the current version of the proto-file
enum CurrentVersionEnum {
    VERSION_0_1_0 = 0; // Current version

}

// Parameter used for Empty inputs
message EmptyParameter {
}

// Ack/Nack- Response message with comment
message AckNackResponse {
    bool acknack = 1; // True=Ack, False=Nack
    string comments = 2; //Comments if needed
}
*/


// The Gateservice definition.
service GatewayTowardsFenix {

    // ***********************************************************************************
    // Runtime methods
    // ***********************************************************************************


    //TestInstructionResults flows from Plugins towards Fenix Inception
    rpc SendTestInstructionResultTowardsFenix (TestInstructionExecutionResultMessage) returns (AckNackResponse) {
    }

    // Log-posts har sent from Plugins towards Fenix Inception
    rpc SendTexecutionLogTowardsFenix (TexecutionLogMessage) returns (AckNackResponse) {
    }

    // TestInstructions Timeouts flows from Fenix Inception towards Plugins
    rpc SendTestInstructionTimeOutTowardsPlugin (TestInstructionTimeOutMessage) returns (AckNackResponse) {
    }

    // ***********************************************************************************
    // Test Data methods
    // ***********************************************************************************

    rpc SupportedTestDataDomains (SupportedTestDataDomainsWithHeadersMessage) returns (AckNackResponse) {
    }

    rpc TestDataFromFilterValues (TestDataFromFilterValuesMessage) returns (AckNackResponse) {

    }
    // ***********************************************************************************
    // Registration methods
    // ***********************************************************************************

    // Register an avalible TestInstruction
    rpc RegisterAvailbleTestInstruction(AvailbleTestInstructionAtPluginMessage) returns (AckNackResponse){
    }

    rpc RegistrateAvailableTestDataDomains(SupportedTestDataDomainsMessage) returns (AckNackResponse) {
    }


    // A Plugin register itself at a distributed gateway or a distributed gateway register itself at Fenix Inception gateway
    rpc RegisterClientAddress (RegisterClientAddressRequest) returns (RegisterClientAddressResponse) {
    }

    // ***********************************************************************************
    // Administrative methods
    // ***********************************************************************************

    // A Plugin can send a INFO- OR WARNING-message to Fenix by this mwethod
    rpc SendMessageToFenix (InformationMessage) returns (AckNackResponse){
    }


}

