syntax = "proto3";
package Gateway_gRPC_api;

import "timestamp.proto";



// ***********************************************************************************
// Administrative messages
// ***********************************************************************************

// Used for defining the current version of the proto-file
enum CurrentVersionEnum {
    VERSION_0_1_0 = 0; // Current version

}

// Parameter used for Empty inputs
message EmptyParameter {
}

// Ack/Nack- Response message with comment
message AckNackResponse {
    bool acknack = 1; // True=Ack, False=Nack
    string comments = 2; //Comments if needed
}

// Defines the different ways testdata should be formated back to Fenix
enum TestDataFormatTypeEnum {
    LIST = 0; // TestData will be delivered as a normal list
    //JSON_OBJECT = 1; // TestData will be delivered as a json object
    //XML = 2; // TestData will be delivered as a XML-file
    //OTHER_FILE = 3; TestData will be delivered as a non standard file
}